--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="responsive">
                     <div class="gallery">
                       <a target="_blank" href="https://yuleni1.github.io/Project-1-11/#">
-                        <img src="assets/Cute Cat & A Fact.png" alt="Site" width="300" height="300">
+                        <img src="assets/images/Cute Cat & A Fact.png" alt="Site" width="300" height="300">
                       </a>
                       <div class="desc">Cute Cat And a Fact</div>
                     </div>
